[gd_scene load_steps=69 format=2]

[ext_resource path="res://screens/game/WaitingRoom.gd" type="Script" id=1]
[ext_resource path="res://assets/platformer_in_the_forest.png" type="Texture" id=2]
[ext_resource path="res://screens/game/objects/Arrows.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/game/objects/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://screens/game/MovementCamera.gd" type="Script" id=6]
[ext_resource path="res://assets/screens/game/backgrounds/blue_L4.png" type="Texture" id=7]
[ext_resource path="res://assets/screens/game/backgrounds/blue_L2.png" type="Texture" id=8]
[ext_resource path="res://assets/screens/game/backgrounds/blue_L1.png" type="Texture" id=9]
[ext_resource path="res://assets/screens/game/backgrounds/blue_L3.png" type="Texture" id=10]
[ext_resource path="res://assets/tileset.png" type="Texture" id=11]
[ext_resource path="res://screens/game/Score Manager.tscn" type="PackedScene" id=12]
[ext_resource path="res://screens/game/objects/trampoline.tscn" type="PackedScene" id=13]
[ext_resource path="res://screens/game/Progress Bar.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/fire_cannon.png" type="Texture" id=15]
[ext_resource path="res://assets/spawn_pipe.png" type="Texture" id=16]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0.0203285 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 32, 32, 0, 32, 0, 32, 32, 32 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=34]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=35]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=36]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=37]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=38]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=39]
0/name = "platformer_in_the_forest.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 160, 0, 49, 32 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 2, 0 ), 64, Vector2( 2, 1 ), 65 ]
0/autotile/icon_coordinate = Vector2( 1, 1 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 11 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 512, 224 )
1/tile_mode = 1
1/autotile/bitmask_mode = 2
1/autotile/bitmask_flags = [ Vector2( 0, 0 ), 144, Vector2( 0, 1 ), 63, Vector2( 1, 0 ), 432, Vector2( 2, 0 ), 504, Vector2( 3, 0 ), 216, Vector2( 3, 2 ), 144, Vector2( 3, 3 ), 146, Vector2( 3, 4 ), 146, Vector2( 3, 5 ), 18, Vector2( 4, 2 ), 511, Vector2( 4, 3 ), 511, Vector2( 4, 5 ), 438, Vector2( 5, 0 ), 504, Vector2( 5, 1 ), 63, Vector2( 5, 2 ), 511, Vector2( 5, 3 ), 511, Vector2( 5, 5 ), 511, Vector2( 6, 2 ), 511, Vector2( 6, 3 ), 511, Vector2( 6, 5 ), 219, Vector2( 8, 0 ), 56, Vector2( 8, 1 ), 56, Vector2( 8, 2 ), 255, Vector2( 9, 2 ), 447, Vector2( 10, 0 ), 255, Vector2( 10, 1 ), 507, Vector2( 11, 0 ), 447, Vector2( 11, 1 ), 510, Vector2( 12, 0 ), 432, Vector2( 12, 1 ), 54, Vector2( 13, 0 ), 216, Vector2( 13, 1 ), 27, Vector2( 14, 0 ), 475, Vector2( 14, 1 ), 439, Vector2( 14, 2 ), 223, Vector2( 14, 3 ), 502, Vector2( 15, 0 ), 508, Vector2( 15, 1 ), 319, Vector2( 15, 2 ), 505, Vector2( 15, 3 ), 127 ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [ Vector3( 5, 5, 7 ) ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 10 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 34 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 35 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 36 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 37 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 38 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 35.2749, 32.5194 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 243.778, 176.245 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 73, 956 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 460, 0, 230, 720 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 690, 0, 230, 720 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 920, 0, 230, 720 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 230, 720 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 230, 0, 230, 720 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "start",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=49]

[sub_resource type="RectangleShape2D" id=50]

[sub_resource type="RectangleShape2D" id=51]

[sub_resource type="RectangleShape2D" id=52]

[sub_resource type="RectangleShape2D" id=53]

[node name="Waiting Room" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2( 2, 3 )
transform = Transform2D( 2, 0, 0, 3, 0, 0 )
scroll_base_scale = Vector2( 0.5, 0.1 )

[node name="Layer 1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 640, 250 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer 1"]
texture = ExtResource( 9 )
centered = false

[node name="Layer 2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 640, 250 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer 2"]
texture = ExtResource( 8 )
centered = false

[node name="Layer 3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 640, 250 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer 3"]
texture = ExtResource( 10 )
centered = false

[node name="Layer 4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 640, 250 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer 4"]
texture = ExtResource( 7 )
centered = false

[node name="Door" parent="." instance=ExtResource( 4 )]
position = Vector2( 1155, 474 )
scale = Vector2( 0.9, 0.7 )
collision_layer = 2

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 39 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 10, 1, 131075, 29, 1, 131075, 65546, 1, 196611, 65565, 1, 196611, 131082, 1, 196611, 131101, 1, 196611, 196618, 1, 0, 196637, 1, 0, 262146, 1, 12, 262147, 1, 5, 262148, 1, 2, 262149, 1, 5, 262150, 1, 5, 262151, 1, 5, 262152, 1, 2, 262153, 1, 15, 262154, 1, 0, 262155, 1, 131087, 262156, 1, 5, 262157, 1, 2, 262158, 1, 2, 262159, 1, 2, 262160, 1, 5, 262161, 1, 2, 262162, 1, 5, 262163, 1, 5, 262164, 1, 5, 262165, 1, 5, 262166, 1, 5, 262167, 1, 2, 262168, 1, 5, 262169, 1, 2, 262170, 1, 2, 262171, 1, 5, 262172, 1, 15, 262173, 1, 0, 262174, 1, 131087, 262175, 1, 2, 262176, 1, 2, 262177, 1, 2, 262178, 1, 5, 262179, 1, 2, 262180, 1, 5, 262181, 1, 13, 327682, 1, 327684, 327683, 1, 10, 327684, 1, 196623, 327685, 1, 65541, 327686, 1, 65536, 327687, 1, 65536, 327688, 1, 65536, 327689, 1, 65536, 327690, 1, 65536, 327691, 1, 65541, 327692, 1, 65536, 327693, 1, 65541, 327694, 1, 65536, 327695, 1, 65536, 327696, 1, 65541, 327697, 1, 65541, 327698, 1, 65536, 327699, 1, 65541, 327700, 1, 65536, 327701, 1, 65541, 327702, 1, 65536, 327703, 1, 65536, 327704, 1, 65536, 327705, 1, 65541, 327706, 1, 65541, 327707, 1, 65541, 327708, 1, 65541, 327709, 1, 65541, 327710, 1, 65541, 327711, 1, 65541, 327712, 1, 65541, 327713, 1, 65541, 327714, 1, 65536, 327715, 1, 65551, 327716, 1, 11, 327717, 1, 327686, 393218, 1, 327684, 393219, 1, 131086, 393252, 1, 65550, 393253, 1, 327686, 458754, 1, 327684, 458755, 1, 327686, 458788, 1, 327684, 458789, 1, 327686, 524290, 1, 327684, 524291, 1, 327686, 524324, 1, 327684, 524325, 1, 327686, 589826, 1, 327684, 589827, 1, 327686, 589860, 1, 327684, 589861, 1, 327686, 655362, 1, 327684, 655363, 1, 327686, 655396, 1, 327684, 655397, 1, 327686, 720898, 1, 327684, 720899, 1, 327686, 720932, 1, 327684, 720933, 1, 327686, 786434, 1, 327684, 786435, 1, 327686, 786468, 1, 327684, 786469, 1, 327686, 851970, 1, 327684, 851971, 1, 327686, 852004, 1, 327684, 852005, 1, 327686, 917506, 1, 327684, 917507, 1, 327686, 917540, 1, 327684, 917541, 1, 327686, 983042, 1, 327684, 983043, 1, 327686, 983076, 1, 65548, 983077, 1, 65549, 1048578, 1, 327684, 1048579, 1, 327686, 1114114, 1, 327684, 1114115, 1, 327686, 1179650, 1, 327684, 1179651, 1, 14, 1245186, 1, 327684, 1245187, 1, 65546, 1245188, 1, 131087, 1245189, 1, 5, 1245190, 1, 2, 1245191, 1, 2, 1245192, 1, 5, 1245193, 1, 5, 1245194, 1, 5, 1245195, 1, 5, 1245196, 1, 5, 1245197, 1, 2, 1245198, 1, 2, 1245199, 1, 2, 1245200, 1, 5, 1245201, 1, 5, 1245202, 1, 5, 1245203, 1, 2, 1245204, 1, 2, 1245205, 1, 2, 1245206, 1, 5, 1245207, 1, 5, 1245208, 1, 2, 1245209, 1, 2, 1245210, 1, 5, 1245211, 1, 2, 1245212, 1, 2, 1245213, 1, 2, 1245214, 1, 2, 1245215, 1, 5, 1245216, 1, 5, 1245217, 1, 2, 1245218, 1, 2, 1245219, 1, 2, 1245220, 1, 2, 1245221, 1, 13, 1310722, 1, 65548, 1310723, 1, 65541, 1310724, 1, 65536, 1310725, 1, 65541, 1310726, 1, 65536, 1310727, 1, 65536, 1310728, 1, 65536, 1310729, 1, 65541, 1310730, 1, 65541, 1310731, 1, 65536, 1310732, 1, 65541, 1310733, 1, 65536, 1310734, 1, 65536, 1310735, 1, 65536, 1310736, 1, 65541, 1310737, 1, 65536, 1310738, 1, 65536, 1310739, 1, 65536, 1310740, 1, 65541, 1310741, 1, 65541, 1310742, 1, 65541, 1310743, 1, 65541, 1310744, 1, 65541, 1310745, 1, 65536, 1310746, 1, 65541, 1310747, 1, 65541, 1310748, 1, 65536, 1310749, 1, 65541, 1310750, 1, 65541, 1310751, 1, 65541, 1310752, 1, 65541, 1310753, 1, 65536, 1310754, 1, 65541, 1310755, 1, 65541, 1310756, 1, 65536, 1310757, 1, 65549, 1835010, 0, 65537, 2752541, 0, 65537, 2752542, 0, 65537, 2752543, 0, 65537, 2818125, 0, 65537 )

[node name="Limite" type="Area2D" parent="."]
position = Vector2( 1251, 564 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limite"]
shape = SubResource( 40 )

[node name="Arrow" parent="." instance=ExtResource( 3 )]
position = Vector2( 550.828, 480.983 )
scale = Vector2( 0.25, 0.25 )

[node name="DoorOpeningArea" type="Area2D" parent="."]
position = Vector2( 1106, 584 )
scale = Vector2( 0.45, 0.5 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorOpeningArea"]
shape = SubResource( 41 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
script = ExtResource( 6 )

[node name="KillArea" type="Area2D" parent="Camera2D"]
position = Vector2( -640, -360 )
collision_layer = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/KillArea"]
position = Vector2( 77, 156 )
shape = SubResource( 42 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/KillArea"]
visible = false
margin_top = -800.0
margin_right = 146.0
margin_bottom = 1080.0
color = Color( 0.980392, 0.00392157, 0.00392157, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Camera2D/KillArea"]
position = Vector2( 93, 360 )
frames = SubResource( 48 )
animation = "start"
playing = true

[node name="KillAreaFloor" type="Area2D" parent="Camera2D"]
position = Vector2( -1280, 720 )
scale = Vector2( 64, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/KillAreaFloor"]
position = Vector2( 20, 20 )
scale = Vector2( 2, 2 )
shape = SubResource( 49 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/KillAreaFloor"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillAreaLeft" type="Area2D" parent="Camera2D"]
position = Vector2( -1320, -1160 )
scale = Vector2( 1, 47 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/KillAreaLeft"]
position = Vector2( 20, 20 )
scale = Vector2( 2, 2 )
shape = SubResource( 50 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/KillAreaLeft"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillAreaRight" type="Area2D" parent="Camera2D"]
position = Vector2( 1280, -1160 )
scale = Vector2( 1, 47 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/KillAreaRight"]
position = Vector2( 20, 20 )
scale = Vector2( 2, 2 )
shape = SubResource( 51 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/KillAreaRight"]
margin_right = 40.0
margin_bottom = 40.0

[node name="KillAreaTop" type="Area2D" parent="Camera2D"]
position = Vector2( -1280, -1200 )
scale = Vector2( 64, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/KillAreaTop"]
position = Vector2( 20, 20 )
scale = Vector2( 2, 2 )
shape = SubResource( 52 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/KillAreaTop"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Meta" type="Area2D" parent="."]
scale = Vector2( 10, 72 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meta"]
shape = SubResource( 53 )

[node name="ColorRect" type="ColorRect" parent="Meta"]
margin_left = -10.1
margin_top = -10.0
margin_right = 9.9
margin_bottom = 10.0
color = Color( 1, 1, 1, 0.392157 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Progress Bar" parent="CanvasLayer" instance=ExtResource( 14 )]
margin_left = 150.0
margin_top = 690.0
margin_right = 150.0
margin_bottom = 690.0

[node name="Score Manager" parent="CanvasLayer" instance=ExtResource( 12 )]
position = Vector2( 1160, 0 )

[node name="trampoline" parent="." instance=ExtResource( 13 )]
position = Vector2( 793, 593 )

[node name="Spawn Tube 1" type="Sprite" parent="."]
position = Vector2( 162, 400 )
scale = Vector2( 1.4, 2 )
z_index = 2
texture = ExtResource( 16 )

[connection signal="body_entered" from="Limite" to="." method="_on_Limite_body_entered"]
[connection signal="body_entered" from="DoorOpeningArea" to="." method="_on_DoorOpeningArea_body_entered"]
[connection signal="body_exited" from="DoorOpeningArea" to="." method="_on_DoorOpeningArea_body_exited"]
[connection signal="body_entered" from="Camera2D/KillArea" to="." method="_on_KillArea_body_entered"]
[connection signal="body_entered" from="Camera2D/KillAreaFloor" to="." method="_on_KillAreaFloor_body_entered"]
[connection signal="body_entered" from="Camera2D/KillAreaLeft" to="." method="_on_KillAreaLeft_body_entered"]
[connection signal="body_entered" from="Camera2D/KillAreaRight" to="." method="_on_KillAreaRight_body_entered"]
[connection signal="body_entered" from="Camera2D/KillAreaTop" to="." method="_on_KillAreaTop_body_entered"]
[connection signal="body_entered" from="Meta" to="." method="_on_Meta_body_entered"]
